--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "ember-data": "~3.12.0",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^6.7.1",
+    "ember-google-maps": "^2.2.3",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-simple-auth": "^1.9.2",
+    "ember-simple-google-maps": "^1.0.0",
     "ember-source": "~3.12.0",
     "ember-welcome-page": "^4.0.0",
     "emberfire": "^3.0.0-rc.6",
@@ -63,6 +65,7 @@
   },
   "dependencies": {
     "curl-request": "^1.1.1",
+    "ol": "^6.0.1",
     "request": "^2.88.0"
   }
 }
